refactoring notebook for residual and mcmc functions

--- a/notebooks/exploratory/1.0-twh-dsf-sensitivity.md
+++ b/notebooks/exploratory/1.0-twh-dsf-sensitivity.md
@@ -39,6 +39,9 @@ import matplotlib.pyplot as plt
 from uegdielectric import ElectronGas, dielectric
 
 from src.utilities import elec_loss_fn
+
+import warnings
+warnings.filterwarnings('ignore')
 ```
 
 ```{code-cell} ipython3
@@ -173,8 +176,9 @@ from src.utilities import kramerskronig
 
 ```{code-cell} ipython3
 xlog = np.geomspace(1e-1, 1e3, 100)
-νr = ν_lorentz(xlog, width=10)
-νi = kramerskronig(xlog, νr)
+νrfunc = lambda x: ν_lorentz(x, width=10)
+νr = νrfunc(xlog)
+νi = kramerskronig(xlog, νrfunc)
 ```
 
 ```{code-cell} ipython3
@@ -242,9 +246,9 @@ def plotsensitivity(
     for kw in kwarglist:
 
         def ν(ω_):
-            realcoll = ν_model(ω_, **kw)
+            realcoll = lambda x : ν_model(x, **kw)
             imagcoll = kramerskronig(ω_, realcoll)
-            return realcoll + 1j * imagcoll
+            return realcoll(ω_) + 1j * imagcoll
 
         elfcalc = elec_loss_fn(dielectric.Mermin(eg), q, ω, ν)
 
@@ -313,10 +317,14 @@ The current model isn't that great because changing the `rise` of the model actu
 
 ```{code-cell} ipython3
 def ν_model_2(x, center=0, height=1, power=1):
+    expanddim = False
+    if np.ndim(x) == 0:
+        x = np.asarray(x)[None]
+        expanddim = True
     res = height * np.ones(len(x))
     powerlaw = x > center
     res[powerlaw] = height * (x[powerlaw] - center + 1) ** power
-    return res
+    return res[0] if expanddim else res
 ```
 
 ```{code-cell} ipython3
@@ -422,8 +430,4 @@ axs = plotsensitivity(
 axs[0].set_title("higher density")
 axs[1].set_ylim(-20, 20)
 axs[1].legend()
-```
-
-```{code-cell} ipython3
-
 ```
