--- a/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
+++ b/notebooks/exploratory/4.0-twh-optimize-known-collisions.md
@@ -12,9 +12,9 @@ kernelspec:
   name: python3
 ---
 
-# Optimize collision rate model for known collision rate data
+# Optimize collision frequency model for known collision frequency data
 
-Given some data produced from the Mermin electron loss function for known parameters for our collision rate model,
+Given some data produced from the Mermin electron loss function for known parameters for our collision frequency model,
 we perform a least squares optimization to extract these parameters from the ELF data.
 
 ```{code-cell} ipython3
@@ -27,8 +27,9 @@ import json
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay
-from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
+from src.utilities import AtomicUnits, elec_loss_fn
+import src.inference.probability_models as prob
 ```
 
 ```{code-cell} ipython3
@@ -39,15 +40,15 @@ from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
 %autoreload 2
 ```
 
-# Define collision rate model
+# Define collision frequency model
 
 ```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
+# define our collision frequency function
+def collisionfreq(freq, params):
     # real part
     recollision = collision_activate_decay(freq, **params)
     # imaginary part
-    imcollision = kramerskronig(freq, recollision)
+    imcollision = collision_activate_decay_imag(freq, **params)
 
     return recollision + 1j * imcollision
 ```
@@ -79,7 +80,7 @@ wavenum_list_data = [0.944863, 1.889726, 2.834589] # 1/angstrom
 datadump = np.loadtxt(filename, skiprows=17, unpack=True)
 freq_data = datadump[0] # [eV]
 print(f"length of data = {len(freq_data)}")
-collrate_data = datadump[1] + 1j * datadump[2]
+collfreq_data = datadump[1] + 1j * datadump[2]
 
 # index corresponds to wave number value
 qi = 0
@@ -87,48 +88,28 @@ wavenum_val = wavenum_list_data[qi] # 1/angstrom
 elf_data = datadump[qi + 3]
 ```
 
-# Define residual function for optimizing the parameters
-
-This is a first step before doing Bayesian inference
+## Define ELF model
 
 ```{code-cell} ipython3
-def residual_for_optimizer(x, y, dielectricfn, wavenum, collisionfn):
-    """ 
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    freq: array of frequency values
-    collisionfn: function for collision rate, depends on `freq` and `params`
-    
-    returns:
-        residual function that only depends on params
-    """
-    def residual(params):
-        """
-        Residual function that only depends on parameters of collision rate model
-        
-        params (dict): parameters that go into collision rate model
-        """
-        elf_calc = elec_loss_fn(dielectricfn,
-                                wavenum,
-                                x,
-                                lambda x: collisionfn(x, params))
-        return y - elf_calc
-        
-    return residual
+dielectric = Mermin(ElectronGas(t, d))
+
+def elfmodel(freq, params):
+    return elec_loss_fn(
+        dielectric,
+        wavenum_val * AtomicUnits.length,
+        freq,
+        lambda x: collisionfreq(x, params)
+        )
 ```
 
-Test that residual is near zero for exact parameters (up to the resolution of the data)
+# Define residual function for optimizing the parameters
 
 ```{code-cell} ipython3
-resfn = residual_for_optimizer(freq_data / AtomicUnits.energy,
-                               elf_data,
-                               Mermin(ElectronGas(t, d)),
-                               wavenum_val * AtomicUnits.length,
-                               collisionrate
-                              )
-np.max(np.abs(resfn(true_params)))                     
+def residual(params):
+    return prob.residual(
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="abs"
+    )
+np.linalg.norm(residual(true_params))
 ```
 
 # Optimize to get initial guess for parameters
@@ -158,13 +139,6 @@ def dict_least_squares(fun, dict0, *args, **kwargs):
 ```
 
 ```{code-cell} ipython3
-# setup
-residual = residual_for_optimizer(freq_data / AtomicUnits.energy,
-                                  elf_data,
-                                  Mermin(ElectronGas(t, d)),
-                                  wavenum_val * AtomicUnits.length,
-                                  collisionrate
-                                 )
 # initial parameter guesses
 initparams = { "lorentzian_height": 1, 
                "lorentzian_powerlaw": 1, 
@@ -180,32 +154,36 @@ optresult = dict_least_squares(residual, initparams, max_nfev=100)
 optresult
 ```
 
-Plot true collision rate and the optimized versions
+Plot true collision frequency and the optimized versions
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, collrate_data.real, c="C3", label="true")
-plt.plot(freq_data, collrate_data.imag, c="C3", ls="--")
+plt.semilogx(freq_data, collfreq_data.real, c="C0", label="true", lw=3)
+plt.plot(freq_data, collfreq_data.imag, c="C0", ls="--", lw=3)
 # optimized
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C3", label="opt.")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).imag, c="C3", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision frequency [au]")
 plt.legend()
 ```
 
-Plot the ELFs using the true and optimized collision rate parameters
+Plot the ELFs using the true and optimized collision frequency parameters
 
 ```{code-cell} ipython3
 plt.loglog(freq_data, elf_data, c="C3", label="true")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d)),
                        wavenum_val * AtomicUnits.length,
                        freq_data / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
+                       lambda x: collisionfreq(x, optresult.x)
                       )
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
 plt.legend()
+```
+
+```{code-cell} ipython3
+
 ```
