--- a/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
+++ b/notebooks/exploratory/4.1-twh-optimize-known-AA_collisions.md
@@ -12,16 +12,16 @@ kernelspec:
   name: python3
 ---
 
-# Optimize collision rate model for known Average Atom collision rate data
+# Optimize collision frequency model for known Average Atom collision frequency data
 
-We use collision rate data from an average atom model to produce Mermin ELF data.
-We then try to fit a Mermin ELF model using our collision rate model to the data.
+We use collision frequency data from an average atom model to produce Mermin ELF data.
+We then try to fit a Mermin ELF model using our collision frequency model to the data.
 This is different from notebook `4.0-twh-optimize-known-collisions.txt` because 
-the collision rate that produced the data comes from an independent/black-box 
-collision rate model.
+the collision frequency that produced the data comes from an independent/black-box 
+collision frequency model.
 
 The goal with this notebook is to highlight the flexibility of our own collision
-rate model.
+frequency model.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -43,23 +43,24 @@ from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay
+from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+from src.utilities import AtomicUnits, elec_loss_fn
+import src.inference.probability_models as prob
 
 import warnings
 warnings.filterwarnings('ignore')
 ```
 
-# Define collision rate model
+# Define collision frequency model
 
 ```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
+# define our collision frequency function
+def collisionfreq(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = kramerskronig(freq, recollision)
+    imcollision = collision_activate_decay_imag(freq, *params)
 
     return recollision + 1j * imcollision
 ```
@@ -80,77 +81,69 @@ d = d_ang * AtomicUnits.length**3
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-collrate_data = datadump[1] + 1j * datadump[2]
+collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
+# function for true collision freq
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
+wavenum = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
 
-### Create ELF data with collision rate data
+### Create ELF data with collision frequency data
 
 ```{code-cell} ipython3
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                         wavenum_val * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
-                        true_collrate_fn
+                        true_collfreq_fn
                        )
 print(elf_data.shape)
 ```
 
-### plot the collision rate data
+### plot the collision frequency data
 
 ```{code-cell} ipython3
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, label="real")
+plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
+```
+
+# Define the ELF model
+
+using the Mermin dielectric function and the `collisionfreq` function
+
+```{code-cell} ipython3
+dielectric = Mermin(ElectronGas(t, d, dos_fn))
+
+def elfmodel(freq, params):
+    return elec_loss_fn(
+        dielectric,
+        wavenum * AtomicUnits.length,
+        freq,
+        lambda x: collisionfreq(x, params)
+        )
 ```
 
 # Define residual function for optimizing the parameters
 
-This is a first step before doing Bayesian inference
-
 ```{code-cell} ipython3
-def residual_fn(x, y, dielectricfn, wavenum, collisionfn, params):
-    """ 
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    collisionfn: function for collision rate, depends on `freq` and the
-        parameters `params` we want to optimize
-    params (tuple): parameters that go into collision rate model `collisionfn`
-    
-    returns:
-        residual of the model with respect to the data `y`
-    """
-    elf_calc = elec_loss_fn(dielectricfn,
-                            wavenum,
-                            x,
-                            lambda x: collisionfn(x, params))
-    return y - elf_calc
+def residual(params):
+    return prob.residual(
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+    )
 ```
 
 # Optimize to get initial guess for parameters
 
 ```{code-cell} ipython3
-# setup
-residual = partial(residual_fn,
-                   freq_data / AtomicUnits.energy,
-                   elf_data,
-                   Mermin(ElectronGas(t, d, dos_fn)),
-                   wavenum_val * AtomicUnits.length,
-                   collisionrate
-                  )
 # initial parameter guesses
 initparams = (1, 1, 1, 1)
 
@@ -166,13 +159,13 @@ Plot true collision frequencies and the optimized versions
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
+plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
 # optimized
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
@@ -181,7 +174,7 @@ plt.semilogx(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum_val * AtomicUnits.length,
                        freq_data / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
+                       lambda x: collisionfreq(x, optresult.x)
                       )
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
@@ -195,7 +188,7 @@ plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum_val * AtomicUnits.length,
                        freq_data / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
+                       lambda x: collisionfreq(x, optresult.x)
                       )
 plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
