--- a/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
+++ b/notebooks/exploratory/4.2-twh-optimize-loss-fn-form.md
@@ -12,10 +12,10 @@ kernelspec:
   name: python3
 ---
 
-# Optimize collision rate model for known Average Atom collision rate data, using different residual functions
+# Optimize collision frequency model for known Average Atom collision frequency data, using different residual functions
 
-We use collision rate data from an average atom model to produce Mermin ELF data.
-We then try to fit a Mermin ELF model using our collision rate model to the data.
+We use collision frequency data from an average atom model to produce Mermin ELF data.
+We then try to fit a Mermin ELF model using our collision frequency model to the data.
 
 This is very similar to `4.1-twh-optimize-known-AAcollisions.txt`, but now we want to examine the effects that
 different residual functions (or different loss functions) have on the result. We also examine the optimization 
@@ -42,9 +42,9 @@ from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay
+from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+from src.utilities import AtomicUnits, elec_loss_fn
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -66,11 +66,11 @@ d = d_ang * AtomicUnits.length**3
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-collrate_data = datadump[1] + 1j * datadump[2]
+collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
+# function for true collision freq
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
@@ -80,7 +80,7 @@ freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 100) # [eV]
 wavenum_val = 0.7 / AtomicUnits.length # 1/[angstrom]
 ```
 
-### Create ELF data with collision rate data, and an noisy ELF data set
+### Create ELF data with collision frequency data, and an noisy ELF data set
 
 We will also trim down the number of data points.
 
@@ -89,7 +89,7 @@ We will also trim down the number of data points.
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                         wavenum_val * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
-                        true_collrate_fn
+                        true_collfreq_fn
                        )
 print(f"shape of ELF data = {elf_data.shape}")
 
@@ -98,25 +98,25 @@ print(f"shape of ELF data = {elf_data.shape}")
 elf_data_noise = elf_data + 0.01 * np.max(elf_data) * rng.standard_normal(len(elf_data)) 
 ```
 
-### plot the collision rate data
+### plot the collision frequency data
 
 ```{code-cell} ipython3
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, label="real")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, label="real")
+plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
-# Define collision rate model
+# Define collision frequency model
 
 ```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
+# define our collision frequency function
+def collisionfreq(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = kramerskronig(freq, recollision)
+    imcollision = collision_activate_decay_imag(freq, *params)
 
     return recollision + 1j * imcollision
 ```
@@ -136,11 +136,11 @@ def make_plots(
 
     freq (array_like): frequency data points in [eV] units
     opelf (array_like): ELF data from model using optimized collision
-        rate parameters
+        freq parameters
     elfdata (array_like): ELF data from data set
-    optcollision (array_like): collision rate data from model using
-        optimized collision rate parameters
-    collisiondata (array_like): collision rate data used to generate
+    optcollision (array_like): collision freq data from model using
+        optimized collision freq parameters
+    collisiondata (array_like): collision freq data used to generate
         `elfdata`
     
     """
@@ -220,9 +220,9 @@ def residual_fn(
     ydata: ELF data points, atomic units
     dielectricfn: dielectric function, a function of `wavenum` and `x`
     wavenum: wave number value(s), atomic units
-    collisionfn: function for collision rate, depends on `freq` and the
+    collisionfn: function for collision freq, depends on `freq` and the
         parameters `params` we want to optimize
-    params (tuple): parameters that go into collision rate model `collisionfn`
+    params (tuple): parameters that go into collision freq model `collisionfn`
     type (string): the type of residual function. There are four choices:
         "abs" - absolute residual: ydata - model
         "rel" - relative residual: (ydata - model) / ydata
@@ -279,10 +279,10 @@ def analysis(
     dielectricfn (function): dielectric function, a function of
         `wavenum` and `freq`
     wavenum (scalar): wave number value(s), in atomic units
-    collisionfn (function): function for collision rate, depends on
+    collisionfn (function): function for collision freq, depends on
         `freq` and the parameters we want to optimize
     initparams (tuple): initial parameters for optimization
-    collisiondata (array_like): collision rate data used to create
+    collisiondata (array_like): collision freq data used to create
         `ydata`
     residualtype (string): the type of residual function. There are
         four choices:
@@ -313,10 +313,10 @@ def analysis(
     
     # optimization results
     if residualtype == "abs" or residualtype == "rel":
-        optresult = optimize.least_squares(residual, initparams, max_nfev=150)
+        optresult = optimize.least_squares(residual, initparams, max_nfev=150, bounds=(0, np.inf))
     else:
         cost = lambda x : np.linalg.norm(residual(x))**2 / 2
-        optresult = optimize.minimize(cost, initparams, method="BFGS", options={"maxiter":150})
+        optresult = optimize.minimize(cost, initparams, method="BFGS", options={"maxiter":150, "bounds": (0, np.inf)})
 
     # print difference between the model with optimized parameters
     # and the data
@@ -347,9 +347,9 @@ opt = analysis(freq_data / AtomicUnits.energy,
                elf_data,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
-               collisionrate,
+               collisionfreq,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="abs"
               )
 ```
@@ -361,9 +361,9 @@ opt = analysis(freq_data / AtomicUnits.energy,
                elf_data,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
-               collisionrate,
+               collisionfreq,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="rel"
               )
 ```
@@ -375,9 +375,9 @@ opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
-               collisionrate,
+               collisionfreq,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                "abs"
               )
 ```
@@ -392,9 +392,9 @@ opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
-               collisionrate,
+               collisionfreq,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="rel"
               )
 ```
@@ -406,9 +406,9 @@ opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
-               collisionrate,
+               collisionfreq,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="rel_mod"
               )
 ```
@@ -420,9 +420,13 @@ opt = analysis(freq_data / AtomicUnits.energy,
                elf_data_noise,
                Mermin(ElectronGas(t, d, dos_fn)),
                wavenum_val * AtomicUnits.length,
-               collisionrate,
+               collisionfreq,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="rel_geom"
               )
+```
+
+```{code-cell} ipython3
+
 ```
