--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -14,7 +14,7 @@ kernelspec:
 
 # Bayesian Inference with Markov Chain Monte Carlo: Ideal Dataset
 
-This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF data for this notebook is generated from our collision model _fit to Average Atom collision rate data_. In other words, the collision rate we are trying to find is exactly representable by our model, so we are testing the limits of the inversion process.
+This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF data for this notebook is generated from our collision model _fit to Average Atom collision frequency data_. In other words, the collision frequency we are trying to find is exactly representable by our model, so we are testing the limits of the inversion process.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -36,9 +36,9 @@ from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay
+from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
 from src.inference.mcmc_inference import inference_loop, flat_mcmc_samples
-from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+from src.utilities import AtomicUnits, elec_loss_fn
 import src.inference.probability_models as prob
 
 import warnings
@@ -61,11 +61,11 @@ d = d_ang * AtomicUnits.length**3
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-AA_collrate_data = datadump[1] + 1j * datadump[2]
+AA_collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for Average Atom collision rate
-AA_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collrate_data)
+# function for Average Atom collision freq
+AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
@@ -75,22 +75,22 @@ freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 wavenum = 1.55 # 1/[angstrom]
 ```
 
-# Define collision rate model
+# Define collision frequency model
 
 ```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
+# define our collision frequency function
+def collisionfreq(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = kramerskronig(freq, recollision)
+    imcollision = collision_activate_decay_imag(freq, *params)
 
     return recollision + 1j * imcollision
 ```
 
 # Define the ELF model
 
-using ther Mermin dielectric function and the `collisionrate` function
+using ther Mermin dielectric function and the `collisionfreq` function
 
 ```{code-cell} ipython3
 dielectric = Mermin(ElectronGas(t, d, dos_fn))
@@ -100,11 +100,11 @@ def elfmodel(freq, params):
         dielectric,
         wavenum * AtomicUnits.length,
         freq,
-        lambda x: collisionrate(x, params)
+        lambda x: collisionfreq(x, params)
         )
 ```
 
-## Fit our collision rate model to AA collision rate
+## Fit our collision freq model to AA collision freq
 
 Note that we are only fitting to the real part of the data.
 The imaginary part is found from Kramers-Kronig transformation.
@@ -114,23 +114,23 @@ The imaginary part is found from Kramers-Kronig transformation.
 popt_AAcoll, pcov = optimize.curve_fit(
     collision_activate_decay, 
     freq_data / AtomicUnits.energy,
-    AA_collrate_fn(freq_data / AtomicUnits.energy).real,
+    AA_collfreq_fn(freq_data / AtomicUnits.energy).real,
     (1,1,1,1),
     bounds=(0, np.inf)
 )
 print(popt_AAcoll)
 
 # plot to compare
-plt.semilogx(freq_data, (AAcoll := AA_collrate_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
+plt.semilogx(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
 plt.plot(freq_data, AAcoll.imag, c="C3", ls="--")
-plt.plot(freq_data, (modelcoll := collisionrate(freq_data / AtomicUnits.energy, popt_AAcoll)).real, c="C0", label="opt")
+plt.plot(freq_data, (modelcoll := collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll)).real, c="C0", label="opt")
 plt.plot(freq_data, modelcoll.imag, c="C0", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
-### Create ELF data with our collision rate  model using parameters fit to mimic the average atom collision rate data
+### Create ELF data with our collision frequency  model using parameters fit to mimic the average atom collision frequency data
 
 ```{code-cell} ipython3
 # true ELF data
@@ -146,7 +146,7 @@ def residual(params):
     return prob.residual(
         elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
     )
-# initial par
+
 # initial parameter guesses
 initparams = (1, 1, 1, 1)
 
@@ -160,11 +160,11 @@ optresult
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, collisionrate(freq_data / AtomicUnits.energy, popt_AAcoll).real, c="C3", label="true")
+plt.semilogx(freq_data, collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real, c="C3", label="true")
 # optimized
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", ls="--")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
@@ -180,7 +180,7 @@ plt.legend()
 
 # Perform MCMC
 
-Define a (log) posterior distribution that only depends on the parameters of the collision rate model
+Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
 lik_cutoff = 0.05
@@ -215,13 +215,13 @@ dataset = "mcmc samples - model data - rel. residual - 4 params"
 ```{code-cell} ipython3
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using collision rate model
+    "input data info" : f"""Data generated using collision freq model
         fit to average atom data from file {datafile}. Uses updated
-        Kramers-Kronig transform for imaginary part of collisoin rate.""",
+        Kramers-Kronig transform for imaginary part of collisoin freq.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision rate model" : "collision_activate_decay, 4 parameters",
+    "collision freq model" : "collision_activate_decay, 4 parameters",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "residual" : "relative",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
@@ -301,14 +301,14 @@ inds = rng.integers(len(flat_samples), size=100)
 for ind in inds:
     sample = flat_samples[ind]
     plt.loglog(freq_data, 
-               collisionrate(freq_data / AtomicUnits.energy, sample), 
+               collisionfreq(freq_data / AtomicUnits.energy, sample), 
                "C1", 
                 alpha=0.1
               )
 
 # plot true collision frequency
 plt.plot(freq_data,
-         collisionrate(freq_data / AtomicUnits.energy, popt_AAcoll).real,
+         collisionfreq(freq_data / AtomicUnits.energy, popt_AAcoll).real,
          c="k",
          label="true",
          lw=2,
@@ -316,7 +316,7 @@ plt.plot(freq_data,
         )
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 # plt.ylim(1e-3)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
@@ -332,7 +332,7 @@ for ind in inds:
                      eps,
                      wavenum * AtomicUnits.length,
                      freq_data / AtomicUnits.energy,
-                     lambda x: collisionrate(x, sample)
+                     lambda x: collisionfreq(x, sample)
                  ), 
                  "C1", 
                  alpha=0.1)
@@ -356,7 +356,7 @@ for ind in inds:
                  eps,
                  wavenum * AtomicUnits.length,
                  freq_data / AtomicUnits.energy,
-                 lambda x: collisionrate(x, sample)
+                 lambda x: collisionfreq(x, sample)
              ), 
              "C1", 
              alpha=0.1)
