--- a/notebooks/exploratory/6.0-twh-dc-conductivity.md
+++ b/notebooks/exploratory/6.0-twh-dc-conductivity.md
@@ -55,17 +55,15 @@ import h5py
 
 from src.inference import collision_models as cmods
 from src.utilities import AtomicUnits
+from src.inference.mcmc_inference import flat_mcmc_samples
 ```
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
 dataset = "mcmc samples - model data - rel. residual - 4 params"
-emceebackend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 
-tau = emceebackend.get_autocorr_time()
-burnin = int(2 * np.max(tau))
-thin = int(0.5 * np.min(tau))
-flat_samples = emceebackend.get_chain(discard=burnin, flat=True, thin=thin)
+backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
+flat_samples = flat_mcmc_samples(backend)
 ```
 
 ```{code-cell} ipython3
@@ -136,4 +134,8 @@ cond_au2SI = 45998.4813 # S/cm
 
 print(f"mean(DC conductivity) = {mean * cond_au2SI} [S/cm]")
 print(f"Std. Dev.(DC conductivity) = {stddev  * cond_au2SI} [S/cm]")
+```
+
+```{code-cell} ipython3
+
 ```
