--- a/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
+++ b/notebooks/exploratory/4.3-twh-optimize-two-wavenum-ELF.md
@@ -12,15 +12,15 @@ kernelspec:
   name: python3
 ---
 
-# Optimize collision rate model using data from two different values of the wavenumber for the ELF
+# Optimize collision frequency model using data from two different values of the wavenumber for the ELF
 
-We use collision rate data from an average atom model to produce Mermin electron loss function (ELF) data at two different wavenumbers.
-The collision rate itself is independent of the wavenumber, so in theory the optimization should return the same
-result for the collision rate parameters based on ELF data for different wavenumbers. However, we are finding that
+We use collision frequency data from an average atom model to produce Mermin electron loss function (ELF) data at two different wavenumbers.
+The collision frequency itself is independent of the wavenumber, so in theory the optimization should return the same
+result for the collision frequency parameters based on ELF data for different wavenumbers. However, we are finding that
 when using an absolute residual ($r(x) = y_\mathrm{data} - f(x)$) the optimization naturally weighs values near the ELF
 peak more than the orders-of-magnitude smaller values near the tails.
 For different wavenumbers, the peak of the ELF shifts and broadens. The goal with using multiple wavenumbers in this analysis is to
-(1) see how indifferent the optimized collision rate parameters are to the value of the wavenumber used to produce the ELF data and
+(1) see how indifferent the optimized collision frequency parameters are to the value of the wavenumber used to produce the ELF data and
 (2) determine if using more than one wavenumber can force the optimization algorithm to consider more regions of the data on equal
 footing.
 We will also consider the effects when dealing with noisy data, and when using a relative residual function ($(y_\mathrm{data} - f(x)) / y_\mathrm{data}$).
@@ -46,9 +46,10 @@ from multiprocessing import Pool
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay
+from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
 from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+from src.utilities import AtomicUnits, elec_loss_fn
+import src.inference.probability_models as prob
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -82,28 +83,28 @@ d = d_ang * AtomicUnits.length**3
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-collrate_data = datadump[1] + 1j * datadump[2]
+collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
+# function for true collision freq
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 100) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = np.asarray([1.5, 4.39]) # 1/[angstrom]
 ```
 
-### Create ELF data with collision rate data, and an noisy ELF data set
+### Create ELF data with collision frequency data, and an noisy ELF data set
 
 ```{code-cell} ipython3
 # true ELF data
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                         wavenum * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
-                        true_collrate_fn
+                        true_collfreq_fn
                     )
 print(f"shape of ELF data = {elf_data.shape}")
 
@@ -116,13 +117,13 @@ norm_elf_data = normrows(elf_data)
 norm_elf_data_noise = normrows(elf_data_noise)
 ```
 
-### plot the collision rate data
+### plot the collision frequency data
 
 ```{code-cell} ipython3
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
+plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
 plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
@@ -149,25 +150,27 @@ plt.legend()
 ## Normalized ELF function
 
 ```{code-cell} ipython3
-def normelf(dielectricfn, wavenum, freq, collisionfn, collparams):
-    """ ELf with normalized rows """
-    elf = elec_loss_fn(dielectricfn,
-                       wavenum,
-                       freq,
-                       lambda x: collisionfn(x, collparams)
-                      )
+dielectric = Mermin(ElectronGas(t, d, dos_fn))
+
+def normelfmodel(freq, params):
+    elf = elec_loss_fn(
+            dielectric,
+            wavenum * AtomicUnits.length,
+            freq,
+            lambda x: collisionfreq(x, params)
+        )
     return normrows(elf)
 ```
 
-# Define collision rate model
+# Define collision frequency model
 
 ```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
+# define our collision freq function
+def collisionfreq(freq, params):
     # real part
     recollision = collision_activate_decay(freq, *params)
     # imaginary part
-    imcollision = kramerskronig(freq, recollision)
+    imcollision = collision_activate_decay_imag(freq, *params)
 
     return recollision + 1j * imcollision
 ```
@@ -188,11 +191,11 @@ def make_plots(
     
     freq (n,): frequency data points in [eV] units
     opelf (2, n): ELF data from model using optimized collision
-        rate parameters
+        freq parameters
     elfdata (2, n): ELF data from data set
-    optcollision (n,) or (2, n): collision rate data from model using
-        optimized collision rate parameters
-    collisiondata (n,): collision rate data used to generate
+    optcollision (n,) or (2, n): collision freq data from model using
+        optimized collision freq parameters
+    collisiondata (n,): collision freq data used to generate
         `elfdata`
     
     """
@@ -207,7 +210,7 @@ def make_plots(
     fig, axs = plt.subplots(numplots, 1, figsize=figsize, sharex=True)
 
     # Plotting the original/true data
-    # collision rate
+    # collision freq
     axs[0].semilogx(freq,
                     collisiondata.real,
                     c="black",
@@ -222,9 +225,9 @@ def make_plots(
         axs[2].plot(freq, elfdata[1], c="grey", label="ELF(AA) q2")
 
     # plotting optimized results, depends on shape of optimized collision
-    # rate data -- are there two collisions to plot or just one?
+    # freq data -- are there two collisions to plot or just one?
     if optcollision.ndim == 1:
-        # collision rate
+        # collision freq
         axs[0].semilogx(freq, optcollision.real, c="C1", label="opt.")
         axs[0].plot(freq, optcollision.imag, c="C1", ls="--")
         # ELF
@@ -235,7 +238,7 @@ def make_plots(
             axs[2].loglog(freq, optelf[0], c="C1", ls='--', label="ELF(opt.) q1")
             axs[2].plot(freq, optelf[1], c="C1", ls='-.', label="ELF(opt.) q2", alpha=0.6)
     elif optcollision.ndim == 2:
-        # collision rate
+        # collision freq
         axs[0].semilogx(freq, optcollision[0].real, c="C0", label="opt. 1")
         axs[0].plot(freq, optcollision[0].imag, c="C0", ls="--")
         axs[0].semilogx(freq, optcollision[1].real, c="C3", label="opt. 2")
@@ -250,7 +253,7 @@ def make_plots(
     else:
         raise RuntimeError(f"Too many dimension in optcollision with shape {optcollision.shape}")
         
-    axs[0].set_ylabel("collision rate [au]")
+    axs[0].set_ylabel("collision freq [au]")
     axs[0].legend()
     axs[1].set_ylabel("ELF [au]")
     axs[1].legend()
@@ -279,67 +282,7 @@ the data, $r'_i(\theta) = (y_i - f(x_i; \theta))/y_i$. This can be useful if the
 of magnitude and we want to treat each point equally (for example, when using the absolute residual, by default larger values have more importance
 simply because they are larger).
 
-```{code-cell} ipython3
-def residual_fn(
-    freq, 
-    ydata,
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    params, 
-    type="abs"
-):
-    """
-    Returns a 1D residual function between the data and the normalized ELF model.
-    Can be used with multi-dimensional array inputs as long as `ydata`
-    and `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
-    are broadcastable (if `len(wavenum) == m` and `len(freq) == n`,
-    then `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
-    has a shape (m, n)).
-
-    freq: frequency data points corresponding to output data `ydata`, atomic units
-    ydata: ELF data points, atomic units
-    dielectricfn: dielectric function, a function of `wavenum` and `x`
-    wavenum: wave number value(s), atomic units
-    collisionfn: function for collision rate, depends on `freq` and the
-        parameters `params` we want to optimize
-    params (tuple): parameters that go into collision rate model `collisionfn`
-    type (string): the type of residual function. There are four choices:
-        "abs" - absolute residual: ydata - model
-        "rel" - relative residual: (ydata - model) / ydata
-        "rel_mod" - relative residual wrt model: (ydata - model) / model
-        "rel_geom" - relative residual wrt geometric mean of data and model:
-                     (ydata - model) / |ydata * model|**(1 / 2)
-
-        The different types will tend to emphasize different features in the
-        data that the parameters of the model should be optimized to fit.
-    
-    returns:
-        residual of the model with respect to the data `ydata`. If `ydata`
-        has shape (m, n), then return array has shape (m * n, ).
-    """
-    # normalized ELF calculations
-    elf_calc = normelf(dielectricfn,
-                       wavenum,
-                       freq,
-                       collisionfn,
-                       params
-                      )
-    
-    match type:
-        case "abs":
-            weight = 1
-        case "rel":
-            weight = ydata
-        case "rel_mod":
-            weight = elf_calc
-        case "rel_geom":
-            weight = np.abs(ydata * elf_calc)**(1 / 2)
-        case _:
-            raise ValueError(f"residual type {type} not accepted")
-            
-    return ((ydata - elf_calc) / weight).flatten()
-```
++++
 
 ## Define a function to perform the repeated analysis
 
@@ -347,9 +290,6 @@ def residual_fn(
 def analysis(
     freq, 
     ydata, 
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
     initparams, 
     collisiondata, 
     residualtype="abs",
@@ -365,10 +305,10 @@ def analysis(
     dielectricfn (function): dielectric function, a function of
         `wavenum` and `freq`
     wavenum (2,): wave number value(s), in atomic units
-    collisionfn (function): function for collision rate, depends on
+    collisionfn (function): function for collision freq, depends on
         `freq` and the parameters we want to optimize
     initparams (tuple): initial parameters for optimization
-    collisiondata (n,): collision rate data used to create
+    collisiondata (n,): collision freq data used to create
         `ydata`
     residualtype (string): the type of residual function. There are
         four choices:
@@ -381,68 +321,40 @@ def analysis(
                     (ydata - model) / |ydata * model|**(1 / 2)
     separate (default False): separate the analysis for individual
         `wavenum` values.
-    """    
+    """
+    def residual(params):
+        return prob.residual(
+            normelfmodel, freq, ydata, params, residualtype
+        )
+
     # optimization results
     if separate:
         # residual and optimization for first set of data
-        residual1 = partial(
-            residual_fn,
-            freq,
-            ydata[0],
-            dielectricfn,
-            wavenum[0],
-            collisionfn,
-            type=residualtype
-        )
+        def residual1(params):
+            return residual(params)[0:len(freq)]
+
         optresult1 = optimize.least_squares(residual1, initparams, bounds=(0, np.inf), max_nfev=50)
         
         # residual and optimization for second set of data
-        residual2 = partial(
-            residual_fn,
-            freq,
-            ydata[1],
-            dielectricfn,
-            wavenum[1],
-            collisionfn,
-            type=residualtype
-        )
+        def residual2(params):
+            return residual(params)[len(freq):]
+
         optresult2 = optimize.least_squares(residual2, initparams, bounds=(0, np.inf), max_nfev=50)
 
         optresult = np.asarray([optresult1, optresult2])
-        optcollisions = np.asarray([collisionfn(freq, x) for x in [optresult1.x, optresult2.x]])
-        elf_calc = np.asarray([normelf(dielectricfn,
-                                       q,
-                                       freq,
-                                       collisionfn,
-                                       opt.x
-                                      ) 
-                               for q, opt in zip(wavenum, optresult)
-                              ]
-                             )
+        optcollisions = np.asarray([collisionfreq(freq, x) for x in [optresult1.x, optresult2.x]])
+        # Compute ELF using both optimized collision frequencies
+        # ELF model is computed for both frequencies, only take one at a time
+        elf_calc = np.asarray([normelfmodel(freq, opt.x)[i] for i, opt in zip([0, 1], optresult)])
         
     else:
-        # residual and optimization for full data for both wavenumbers
-        residual= partial(
-            residual_fn,
-            freq,
-            ydata,
-            dielectricfn,
-            wavenum,
-            collisionfn,
-            type=residualtype
-        )
         optresult = optimize.least_squares(residual, initparams, bounds=(0, np.inf), max_nfev=50)
-        optcollisions = collisionfn(freq, optresult.x)
-        elf_calc = normelf(dielectricfn,
-                           wavenum,
-                           freq,
-                           collisionfn,
-                           optresult.x
-                          )
+        optcollisions = collisionfreq(freq, optresult.x)
+        elf_calc = normelfmodel(freq, optresult.x)
 
     # plot the results for optimization
     # note that we are normalizing the 
-    _ = make_plots(freq * AtomicUnits.energy, elf_calc, normrows(ydata), optcollisions, collisiondata)
+    _ = make_plots(freq * AtomicUnits.energy, elf_calc, ydata, optcollisions, collisiondata)
     
     return optresult
 ```
@@ -458,17 +370,14 @@ initparams = (1, 1, 1, 1)
 
 ## 1. absolute residual
 
-Use the ELF data at both wavenumbers to get a single set of optimized parameters for our collision rate model. Using this optimized collision rate, we
+Use the ELF data at both wavenumbers to get a single set of optimized parameters for our collision frequency model. Using this optimized collision frequency, we
 compare the ELF calculation at the same two wavenumbers with the data (last two subplots).
 
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                norm_elf_data,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum * AtomicUnits.length,
-               collisionrate,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="abs"
               )
 print(f"least-squares cost with absolute residual and combined ELF data: {opt.cost}")
@@ -479,11 +388,8 @@ Now, we consider the ELF data at the two wavenumbers separately and perform two 
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                norm_elf_data,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum * AtomicUnits.length,
-               collisionrate,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="abs",
                separate=True
               )
@@ -497,11 +403,8 @@ We perform the same two sets of analysis as above (considering the ELF for both 
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                norm_elf_data,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum * AtomicUnits.length,
-               collisionrate,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="rel"
               )
 print(f"least-squares cost with relative residual and combined ELF data: {opt.cost}")
@@ -510,11 +413,8 @@ print(f"least-squares cost with relative residual and combined ELF data: {opt.co
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                norm_elf_data,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum * AtomicUnits.length,
-               collisionrate,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="rel",
                separate=True
               )
@@ -529,11 +429,8 @@ Same analysis with an absolute residual, but now with noisy data.
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                norm_elf_data_noise,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum * AtomicUnits.length,
-               collisionrate,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="abs"
               )
 print(f"least-squares cost with absolute residual and combined ELF data w/ noise: {opt.cost}")
@@ -542,18 +439,11 @@ print(f"least-squares cost with absolute residual and combined ELF data w/ noise
 ```{code-cell} ipython3
 opt = analysis(freq_data / AtomicUnits.energy,
                norm_elf_data_noise,
-               Mermin(ElectronGas(t, d, dos_fn)),
-               wavenum * AtomicUnits.length,
-               collisionrate,
                initparams,
-               true_collrate_fn(freq_data / AtomicUnits.energy),
+               true_collfreq_fn(freq_data / AtomicUnits.energy),
                residualtype="abs",
                separate=True
               )
 for optresult, q in zip(opt, wavenum):
     print(f"least-squares cost with absolute residual and q = {q:.2} 1/A ELF data w/ noise: {optresult.cost}")
-```
-
-```{code-cell} ipython3
-
 ```
