--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -14,7 +14,7 @@ kernelspec:
 
 # Bayesian Inference with Markov Chain Monte Carlo
 
-So far, the analysis notebooks have examined inverting the ELF have used non-linear least squares. This works to some extent, but the resulting collision rate model parameters are very sensitive to the intial guess and the ELF itself is actually fairly independent of this choice. In this notebook, we use another tool called Bayesian inference to not find the single, best set of parameters for the collision rate model, but finds the _posterior_ distribution $p(\alpha|y_\mathrm{data})$ of sets of parameters $\alpha$ for a given set of data $y_\mathrm{data}$. Because the number of parameters we are searching for spans more than a hand-full of parameters for our model, we rely on Markov chain Monte Carlo to efficient sample from our probability distribution.
+So far, the analysis notebooks have examined inverting the ELF have used non-linear least squares. This works to some extent, but the resulting collision frequency model parameters are very sensitive to the intial guess and the ELF itself is actually fairly independent of this choice. In this notebook, we use another tool called Bayesian inference to not find the single, best set of parameters for the collision frequency model, but finds the _posterior_ distribution $p(\alpha|y_\mathrm{data})$ of sets of parameters $\alpha$ for a given set of data $y_\mathrm{data}$. Because the number of parameters we are searching for spans more than a hand-full of parameters for our model, we rely on Markov chain Monte Carlo to efficient sample from our probability distribution.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -26,20 +26,20 @@ So far, the analysis notebooks have examined inverting the ELF have used non-lin
 
 ```{code-cell} ipython3
 import numpy as np
-rng = np.random.default_rng()
 import matplotlib.pyplot as plt
 from scipy import optimize
 from functools import partial
+from datetime import datetime
 
 import emcee 
 from multiprocessing import Pool
-
 from uegdielectric import ElectronGas
 from uegdielectric.dielectric import Mermin
 
-from src.inference.collision_models import collision_activate_decay, drude, gendrude, logistic
-from src.inference.mcmc_inference import unique_hdf5_group
-from src.utilities import kramerskronig, AtomicUnits, elec_loss_fn
+from src.inference.collision_models import collision_activate_decay, collision_activate_decay_imag
+from src.inference.mcmc_inference import inference_loop, flat_mcmc_samples
+from src.utilities import AtomicUnits, elec_loss_fn
+import src.inference.probability_models as prob
 
 import warnings
 warnings.filterwarnings('ignore')
@@ -61,121 +61,80 @@ d = d_ang * AtomicUnits.length**3
 datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
 orig_freq_data = datadump[0] # [eV]
 print(f"length of original data = {len(orig_freq_data)}")
-collrate_data = datadump[1] + 1j * datadump[2]
+AA_collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
-# function for true collision rate
-true_collrate_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, collrate_data)
+# function for Average Atom collision freq
+true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, dos_data)
 
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 1.5 # 1/[angstrom]
+wavenum = 1.55 # 1/[angstrom]
 ```
 
-### Create ELF data with collision rate data
+# Define collision frequency model
+
+```{code-cell} ipython3
+# define our collision frequency function
+def collisionfreq(freq, params):
+    # real part
+    recollision = collision_activate_decay(freq, *params)
+    # imaginary part
+    imcollision = collision_activate_decay_imag(freq, *params)
+
+    return recollision + 1j * imcollision
+```
+
+# Define the ELF model
+
+using the Mermin dielectric function and the `collisionfreq` function
+
+```{code-cell} ipython3
+dielectric = Mermin(ElectronGas(t, d, dos_fn))
+
+def elfmodel(freq, params):
+    return elec_loss_fn(
+        dielectric,
+        wavenum * AtomicUnits.length,
+        freq,
+        lambda x: collisionfreq(x, params)
+        )
+```
+
+### Create ELF data with collision freq data
 
 ```{code-cell} ipython3
 # true ELF data
 elf_data = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                         wavenum * AtomicUnits.length,
                         freq_data / AtomicUnits.energy,
-                        true_collrate_fn
+                        true_collfreq_fn
                     )
 print(f"shape of ELF data = {elf_data.shape}")
 ```
 
-### plot the collision rate data
+### plot the collision freq data
 
 ```{code-cell} ipython3
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
+plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C0", label="real")
+plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C0", ls='--', label="imag.")
 plt.xlabel(r"$\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
-```
-
-# Define collision rate model
-
-```{code-cell} ipython3
-# define our collision rate function
-def collisionrate(freq, params):
-    # real part
-    recollision = collision_activate_decay(freq, *params)
-    # imaginary part
-    imcollision = kramerskronig(freq, recollision)
-
-    return recollision + 1j * imcollision
 ```
 
 # Define residual function
 
 ```{code-cell} ipython3
-def residual_fn(
-    freq, 
-    ydata,
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    params, 
-    type="abs"
-):
-    """
-    Returns a 1D residual function between the data and the normalized ELF model.
-    Can be used with multi-dimensional array inputs as long as `ydata`
-    and `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
-    are broadcastable (if `len(wavenum) == m` and `len(freq) == n`,
-    then `dielectricfn(wavenum, freq, lambda x: collisionfn(x, params))`
-    has a shape (m, n)).
-
-    freq: frequency data points corresponding to output data `ydata`, atomic units
-    ydata: ELF data points, atomic units
-    dielectricfn: dielectric function, a function of `wavenum` and `x`
-    wavenum: wave number value(s), atomic units
-    collisionfn: function for collision rate, depends on `freq` and the
-        parameters `params` we want to optimize
-    params (tuple): parameters that go into collision rate model `collisionfn`
-    type (string): the type of residual function. There are four choices:
-        "abs" - absolute residual: ydata - model
-        "rel" - relative residual: (ydata - model) / ydata
-
-        The different types will tend to emphasize different features in the
-        data that the parameters of the model should be optimized to fit.
-    
-    returns:
-        residual of the model with respect to the data `ydata`. If `ydata`
-        has shape (m, n), then return array has shape (m * n, ).
-    """
-    # normalized ELF calculations
-    elf_calc = elec_loss_fn(dielectricfn,
-                            wavenum,
-                            freq,
-                            lambda x: collisionfn(x, params)
-                           )
-    
-    match type:
-        case "abs":
-            weight = 1
-        case "rel":
-            weight = ydata
-        case _:
-            raise ValueError(f"residual type {type} not accepted")
-            
-    return ((ydata - elf_calc) / weight).flatten()
-```
-
-```{code-cell} ipython3
 # setup
-residual = partial(residual_fn,
-                   freq_data / AtomicUnits.energy,
-                   elf_data,
-                   Mermin(ElectronGas(t, d, dos_fn)),
-                   wavenum * AtomicUnits.length,
-                   collisionrate,
-                   type="rel"
-                  )
+def residual(params):
+    return prob.residual(
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+    )
+
 # initial parameter guesses
 initparams = (1, 1, 1, 1)
 
@@ -189,24 +148,24 @@ optresult
 
 ```{code-cell} ipython3
 # original
-plt.semilogx(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
-plt.plot(freq_data, true_collrate_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
+plt.semilogx(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+plt.plot(freq_data, true_collfreq_fn(freq_data / AtomicUnits.energy).imag, c="C3", ls="--")
 # optimized
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
-plt.plot(freq_data, collisionrate(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+plt.plot(freq_data, collisionfreq(freq_data / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data, c="C0", label="Avg. Atom")
+plt.loglog(freq_data, elf_data, c="C3", label="Avg. Atom")
 opt_elf = elec_loss_fn(Mermin(ElectronGas(t, d, dos_fn)),
                        wavenum * AtomicUnits.length,
                        freq_data / AtomicUnits.energy,
-                       lambda x: collisionrate(x, optresult.x)
+                       lambda x: collisionfreq(x, optresult.x)
                       )
-plt.plot(freq_data, opt_elf, c="C3", ls='-.', label="opt.")
+plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
 plt.ylim(1e-6) # resolution of data
@@ -215,130 +174,7 @@ plt.legend()
 
 # Perform MCMC
 
-+++
-
-The collision rate model we are using has parameters that don't run over the whole real line. For example, the `*_height` keyword argument in our parameters dictionary should be strictly positive. We can define our (log) prior distribution to be a uniform distribution over specific ranges of the real line. This will help constrain our parameters within a defined range.
-
-```{code-cell} ipython3
-def logprior(params, limits):
-    """
-    Uniform prior for the parameters
-
-    params: array_like
-        logarithms of the parameters of collision frequency model
-    limits: array_like of length 2
-        limits of the uniform distribution for all parameters/dimensions
-    """
-    params = np.asarray(params)
-    limits = np.asarray(limits)
-    # check that parameters are within their respective limits
-    if np.all(limits[:, 0] < params) and np.all(params < limits[:, 1]):
-        return 0.0
-    return -np.inf
-```
-
-For the log likelihood function, we want to enforce equal preference to all simulation outcomes that match the data to within some uncertainty, regardless of the de-
-tails of the fit. To do that, we use a cutoff function that smooths the boundaries between accepted and rejected values for the parameters. For this notebook,
-we are also considering noise-free data, so we use the _relative_ residual in our likelihood.
-
-```{code-cell} ipython3
-def loglikelihood(
-    params, 
-    x, 
-    y, 
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    cutoff=0.01
-):
-    """
-    log likelihood function that is the log of an N-dimensional cut-off
-    function with soft (exponential) sides.
-
-    params (array_like): parameters that go into collision rate model
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    freq: array of frequency values
-    collisionfn: function for collision rate, depends on `freq` and `params`
-    hyperparams (dict): keyword arguments for the hyperparameters of the
-        likelihood function. Default 0.01 corresponds to a cutoff of roughly
-        1% agreement between data and the model -- any deviation much more
-        than would return a much smaller log likelihood. 
-    
-    returns:
-        log likelihood evaluated for the given parameters at the input `x`.
-    """
-    if cutoff <= 0:
-        raise RuntimeError("cutoff must be positive and nonzero")
-        
-    residual = residual_fn(
-        x,
-        y,
-        dielectricfn,
-        wavenum,
-        collisionfn,
-        params,
-        type="rel"
-    )
-        
-    loglik = -np.max((residual / (np.sqrt(2) * cutoff))**2)
-    
-    return loglik
-```
-
-For the log posterior distribution, we combine both the log prior and log likelihood functions.
-
-```{code-cell} ipython3
-def logposterior_fn(
-    params,
-    x, 
-    y, 
-    dielectricfn, 
-    wavenum, 
-    collisionfn, 
-    priorhyperparams={}, 
-    likhyperparams={}
-):
-    """
-    log posterior pdf.
-
-    params: the parameters for `collisionfn`
-    x: frequency data points corresponding to output data `y`
-    y: ELF data points
-    dielectricfn: dielectric function, a function of `wavenum` and `freq`
-    wavenum: wave number value(s)
-    freq: array of frequency values
-    collisionfn: function for collision rate, depends on `freq` and (the exponential of) `logparams`
-    likhyperparams (dict): keyword arguments for the hyperparameters of the
-        prior function.
-    likhyperparams (dict): keyword arguments for the hyperparameters of the
-        likelihood function.
-    
-    returns:
-        log posterior function that only depends on params of collision rate
-        model.
-    """
-    lgprior = logprior(params, **priorhyperparams)
-    lglik = loglikelihood(params,
-                          x, 
-                          y, 
-                          dielectricfn, 
-                          wavenum, 
-                          collisionfn, 
-                          **likhyperparams
-                         )
-
-    # if either of the prior or likelihood not finite,
-    # return -infinity
-    if not (np.isfinite(lgprior) and np.isfinite(lglik)):
-        return -np.inf
-        
-    return lgprior + lglik
-```
-
-Define a (log) posterior distribution that only depends on the parameters of the collision rate model
+Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
 lik_cutoff = 0.05
@@ -349,26 +185,15 @@ prior_lims = [
     [0, 100]
 ]
 
-def logposterior(params):
-    """
-    Helper function for logposterior that treats all but the `logparams` argument as global
-    variables.
-
-    Doing it this way (as opposed to a lambda function, for example) because we need to
-    pickle it for multiprocessing (see emcee docs).
-    """
-    return logposterior_fn(params,
-                           freq_data / AtomicUnits.energy,
-                           elf_data,
-                           Mermin(ElectronGas(t, d, dos_fn)),
-                           wavenum * AtomicUnits.length,
-                           collisionrate,
-                           priorhyperparams = {"limits": prior_lims},
-                           likhyperparams = {"cutoff": lik_cutoff}
-                          )
-```
-
-```{code-cell} ipython3
+logprior = prob.UniformLogPrior(prior_lims)
+loglikelihood = prob.SoftCutoffLogLikelihood(
+    elf_data,
+    freq_data / AtomicUnits.energy,
+    elfmodel,
+    lik_cutoff,
+    residualtype="rel"
+)
+logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
 ```
 
@@ -378,23 +203,20 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_AAdata"
-dataset = "mcmc samples - AA data - rel. residual - 4 params"
+dataset = "mcmc samples - model data - rel. residual - 4 params - adaptive KK"
 ```
 
 ```{code-cell} ipython3
-import h5py
-from datetime import datetime
-
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
     "input data info" : f"""Data generated using Average Atom 
          collisions [T-matrix cross sections, nonideal DOS, QOZ structure
-         factors, LB form, inelastic processes], from file {datafile}. Uses updated
-         Kramers-Kronig transform for imaginary part of collisoin rate.""",
+         factors, LB form, inelastic processes], from file {datafile}. Uses adaptive
+         Kramers-Kronig transform for imaginary part of collision freq.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision rate model" : "collision_activate_decay, 4 parameter",
+    "collision freq model" : "collision_activate_decay, 4 parameter",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "residual" : "relative",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
@@ -403,59 +225,22 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 32
-numsamples = 15_000
+numsamples = 100
 ```
 
 ```{code-cell} ipython3
-# # avoid overwriting datasets
-# dataset = unique_hdf5_group(samplesfile, dataset)
-backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
-backend.reset(numchains, ndim)
-
 # randomly initialize chains within the boundaries
 rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
-# perform ensemble MCMC sampling of logposterior
-with Pool() as pool:
-    sampler = emcee.EnsembleSampler(
-        numchains, ndim, logposterior, backend=backend, pool=pool
-    )
-    sampler.run_mcmc(initial_state, numsamples, progress=True) # upwards of 1 1/2 hrs!!
-
-# add information to h5py file
-with h5py.File(samplesfile, "a") as f:
-    dset = f[dataset]
-    for k, v in runinfo.items():
-        dset.attrs[k] = v
-```
-
-```{code-cell} ipython3
-# # view attributes of dataset
-# with h5py.File(samplesfile, "a") as f:
-#     print(list(f.keys()))
-#     dset = f["mcmc_samples_AAdata"]
-#     for attr in dset.attrs:
-#         print(f"{attr} : {dset.attrs[attr]}")
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
 ```
 
 # Read in MCMC data
 
 ```{code-cell} ipython3
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
-```
-
-```{code-cell} ipython3
-tau = backend.get_autocorr_time()
-burnin = int(2 * np.max(tau))
-thin = int(0.5 * np.min(tau))
-flat_samples = backend.get_chain(discard=burnin, flat=True, thin=thin)
-
-print("Mean autocorrelation time: {0:.3f} steps".format(np.mean(tau)))
-print("burn-in: {0}".format(burnin))
-print("thin: {0}".format(thin))
-print("flat chain shape: {0}".format(flat_samples.shape))
-print("Mean acceptance fraction: {0:.3f}".format(np.mean(backend.accepted / backend.iteration)))
+flat_samples = flat_mcmc_samples(backend)
 ```
 
 # MCMC results
@@ -502,14 +287,14 @@ inds = rng.integers(len(flat_samples), size=100)
 for ind in inds:
     sample = flat_samples[ind]
     plt.loglog(freq_data, 
-               collisionrate(freq_data / AtomicUnits.energy, sample), 
+               collisionfreq(freq_data / AtomicUnits.energy, sample), 
                "C1", 
                 alpha=0.1
               )
 
 # plot AA collision frequency
 plt.plot(freq_data,
-         true_collrate_fn(freq_data / AtomicUnits.energy).real,
+         true_collfreq_fn(freq_data / AtomicUnits.energy).real,
          c="k",
          label="Avg. Atom",
          lw=2,
@@ -517,7 +302,7 @@ plt.plot(freq_data,
         )
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.ylabel("collision rate [au]")
+plt.ylabel("collision freq [au]")
 # plt.ylim(1e-3)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_AAdata_collisionsamples")
@@ -533,7 +318,7 @@ for ind in inds:
                      eps,
                      wavenum * AtomicUnits.length,
                      freq_data / AtomicUnits.energy,
-                     lambda x: collisionrate(x, sample)
+                     lambda x: collisionfreq(x, sample)
                  ), 
                  "C1", 
                  alpha=0.1)
@@ -557,7 +342,7 @@ for ind in inds:
                  eps,
                  wavenum * AtomicUnits.length,
                  freq_data / AtomicUnits.energy,
-                 lambda x: collisionrate(x, sample)
+                 lambda x: collisionfreq(x, sample)
              ), 
              "C1", 
              alpha=0.1)
